--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ REDIS_HOST="localhost"
 REDIS_PORT=6379
 REDIS_PASSWORD=""
 REDIS_DB=1
+
+MEILISEARCH_HOST=http://localhost:7700
+MEILISEARCH_MASTER_KEY=masterKey
