chore: add db and setup makefile

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ REDIS_DB=1
 
 MEILISEARCH_HOST=http://localhost:7700
 MEILISEARCH_MASTER_KEY=masterKey
+
+DATABASE_HOST=""
+DATABASE_PORT=20000
+DATABASE_USERNAME=""
+DATABASE_PASSWORD=""
+DATABASE_SCHEMA=""
+DATABASE_DEBUG=false
+DATABASE_DIALECT="mysql"
