feat: handle receiver and processor message

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,9 +7,9 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/main.go",
+      "program": "${workspaceFolder}",
       "stackTraceDepth": 100,
-      "console": "internalConsole",
+      "console": "integratedTerminal",
       "showLog": true,
       "internalConsoleOptions": "openOnFirstSessionStart",
       "showGlobalVariables": true,
@@ -22,9 +22,9 @@
       "type": "go",
       "request": "launch",
       "mode": "auto",
-      "program": "${workspaceFolder}/main.go",
+      "program": "${workspaceFolder}",
       "stackTraceDepth": 100,
-      "console": "internalConsole",
+      "console": "integratedTerminal",
       "showLog": true,
       "internalConsoleOptions": "openOnFirstSessionStart",
       "showGlobalVariables": true,
